--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,51 +1,3 @@
-<!--<html>-->
-<!--<head>-->
-<!--  <link rel="stylesheet" href="https://unpkg.com/@bpmn-io/form-js@0.7.2/dist/assets/form-js.css">-->
-<!--  <style>-->
-<!--    #form {-->
-<!--      max-width: 800px;-->
-<!--    }-->
-<!--  </style>-->
-<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-<!--</head>-->
-
-<!--<body>-->
-<!--<div id="success"><span id="success-message"></span></div>-->
-<!--<div id="form"></div>-->
-
-<!--<script type="application/form-schema" src="recruitment.json"></script>-->
-
-<!--<script src="https://unpkg.com/@bpmn-io/form-js@0.10.0/dist/form-viewer.umd.js"></script>-->
-
-<!--<script>-->
-<!--  $.getJSON('/recruitment.json', function(data) {-->
-<!--    const schema = data;-->
-<!--    const container = document.querySelector('#form');-->
-
-<!--    FormViewer.createForm({-->
-<!--      container,-->
-<!--      schema-->
-<!--    }).then(function(form) {-->
-<!--      console.log(form);-->
-<!--      form.on('submit', event => {-->
-<!--        console.log('Form <submit>', event, event.data);-->
-
-<!--        $.ajax("/start", {-->
-<!--          data : JSON.stringify(event.data),-->
-<!--          contentType : 'application/json',-->
-<!--          type : 'POST',-->
-<!--          success: function(data) {-->
-<!--            form.reset();-->
-<!--            $('#success-message').html("<b>Aplikacja zarejestrowana. Decyzja zostanie przekazana na podany adres email.</b>");-->
-<!--          }-->
-<!--        });-->
-<!--      });-->
-<!--    });-->
-<!--  });-->
-<!--</script>-->
-<!--</body>-->
-<!--</html>-->
-
 <html>
 <head>
   <link rel="stylesheet" href="https://unpkg.com/@bpmn-io/form-js@0.7.2/dist/assets/form-js.css">
@@ -61,53 +13,53 @@
 <div id="success"><span id="success-message"></span></div>
 <div id="form"></div>
 
-<script type="application/form-schema" src="room_select.json"></script>
-
 <script src="https://unpkg.com/@bpmn-io/form-js@0.10.0/dist/form-viewer.umd.js"></script>
 
 <script>
-  // Load room-select.json first
-  $.getJSON('/room_select.json', function(roomSelectData) {
-    const roomSelectSchema = roomSelectData.components;
+  let forms = ['room-select.json', 'user-data.json', 'date-select.json', 'choose-option.json'];
+  let currentFormIndex = 0;
 
-    // Load user-data.json next
-    $.getJSON('/user_data.json', function(userData) {
-      const userDataSchema = userData.components;
+  function loadForm() {
+    if (currentFormIndex >= forms.length) {
+      // Wszystkie formularze zostały przetworzone
+      return;
+    }
 
-      // Load date-select.json after room-select and user-data
-      $.getJSON('/date_select.json', function(dateSelectData) {
-        const dateSelectSchema = dateSelectData.components;
+    let formName = forms[currentFormIndex];
+    $.getJSON('/' + formName, function(data) {
+      const schema = data;
+      const container = document.querySelector('#form');
 
-        // Load choose-option.json at the end
-        $.getJSON('/choose_option.json', function(chooseOptionData) {
-          const chooseOptionSchema = chooseOptionData.components;
+      // Usuń zawartość kontenera formularza
+      container.innerHTML = '';
 
-          const schema = roomSelectSchema.concat(userDataSchema, dateSelectSchema, chooseOptionSchema);
-          const container = document.querySelector('#form');
+      FormViewer.createForm({
+        container,
+        schema
+      }).then(function(form) {
+        console.log(form);
+        form.on('submit', event => {
+          console.log('Form <submit>', event, event.data);
 
-          FormViewer.createForm({
-            container,
-            schema
-          }).then(function(form) {
-            console.log(form);
-            form.on('submit', event => {
-              console.log('Form <submit>', event, event.data);
-
-              $.ajax("/start", {
-                data : JSON.stringify(event.data),
-                contentType : 'application/json',
-                type : 'POST',
-                success: function(data) {
-                  form.reset();
-                  $('#success-message').html("<b>Sala zarezerwowana.</b>");
-                }
-              });
-            });
+          $.ajax("/start", {
+            data : JSON.stringify(event.data),
+            contentType : 'application/json',
+            type : 'POST',
+            success: function(data) {
+              form.reset();
+              $('#success-message').html("<b>Aplikacja zarejestrowana. Decyzja zostanie przekazana na podany adres email.</b>");
+              // Przejdź do następnego formularza
+              currentFormIndex++;
+              loadForm();
+            }
           });
         });
       });
     });
-  });
+  }
+
+  // Rozpocznij ładowanie formularzy
+  loadForm();
 </script>
 </body>
 </html>
