--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 <script src="https://unpkg.com/@bpmn-io/form-js@0.10.0/dist/form-viewer.umd.js"></script>
 
 <script>
-  let forms = ['room-select.json', 'user-data.json', 'date-select.json', 'choose-option.json'];
+  let forms = ['registration_data.json', 'choose-option.json'];
   let currentFormIndex = 0;
 
   function loadForm() {
